# CIS25-Project-1-Test

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
.github/workflows/: test.yml
Unit-Price-Calculator/: main.cpp
Unit-Price-Calculator/util/: convert_currency.cpp  convert_currency.hpp  convert_unit.cpp  convert_unit.hpp  currencies_names.hpp  get_exchange_rate.cpp  get_exchange_rate.hpp  handle_arguments.cpp  handle_arguments.hpp  handle_interaction.cpp  handle_interaction.hpp  handle_interactions.cpp  handle_interactions.hpp  print_help.cpp  print_help.hpp  print_supported_currencies.cpp  print_supported_units.cpp  print_supported_units.hpp  process_input_original.cpp  process_input_original.hpp  process_input_target.cpp  process_input_target.hpp  process_original.cpp  process_original.hpp  process_target.cpp  process_target.hpp  strip_and_to_lower.cpp  supported_currencies.cpp  supported_currencies.hpp  supported_units.cpp  supported_units.hpp  units_names.hpp
include/util/: convert_currency.hpp  convert_unit.hpp  currencies_descriptions.hpp  currencies_enum.hpp  handle_arguments.hpp  print_supported_currencies.hpp  strip_and_to_lower.hpp  units_conversion_rates.hpp  units_descriptions.hpp  units_enum.hpp
src/: main.cpp
src/util/: convert_currency.cpp  convert_unit.cpp  get_exchange_rate.cpp  handle_arguments.cpp  handle_interactions.cpp  print_help.cpp  print_supported_currencies.cpp  print_supported_units.cpp  process_input_original.cpp  process_input_target.cpp
test/: test_main.cpp
