cmake_minimum_required (VERSION 3.21)
project(Unit-Price-Calculator)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")

add_subdirectory (extern/googletest)

include_directories(include ${gtest_SOURCE_DIR}/include ${gtest_SOURCE_DIR})

file(GLOB SOURCES "src/util/*.cpp")
add_executable(main_exec "src/main.cpp" ${SOURCES})
add_executable(test_exec "test/test_main.cpp" ${SOURCES})

target_link_libraries(test_exec gtest gtest_main)

enable_testing()
add_test (NAME Unit-Price-Calculator COMMAND test_exec)